# sotdb

./: Cargo.toml  README.md  example.sotdb
src/: actions.rs  lib.rs  main.rs  structs.rs  table_actions.rs
tests/: test1.sotdb
tests/failures/: test1.sotdb
tests/succes/: test1.sotdb  test2.sotdb  test4.sotdb  test5.sotdb
