[package]
    name="sotdb"
    author=[
        "Tantalum",
        "Discrod: .tantalum",
    ]
    version="0.1.3"
    edition="2021"
    description="simple database"
    license="MIT"
    readme="README.md"
    exclude=[
        "target",
        "tests",
    ]
    include=[
        "src/",
        ".gitignore",
    ]
    keywords=[
        "database",
    ]
    repository="https://github.com/Tantalumoid/sot"
